[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/game_background_4.png" type="Texture" id=2]
[ext_resource path="res://themes/fonts/ROBOVOX_.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/menu/main_menu/train_button.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/main_menu/fight_button.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/main_menu/Banzai.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/menu_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://themes/fonts/ROBOVOX_.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/timeout_warning.gd" type="Script" id=9]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

size = 6
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 0.627451 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0, 0, 0, 0 )
border_blend = false
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0.584314, 0.2, 0.2, 0.6 )
shadow_size = 2
anti_aliasing = false
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 1, 1, 1, 0 )
border_blend = false
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0.585938, 0.201416, 0.201416, 0.6 )
shadow_size = 2
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 0.627451 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0, 0, 0, 0 )
border_blend = false
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0.584314, 0.2, 0.2, 0.6 )
shadow_size = 2
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Content Margin", "Shadow" ]

[sub_resource type="Theme" id=6]

resource_local_to_scene = true
default_font = SubResource( 2 )
Button/colors/font_color = Color( 0.996094, 0.983326, 0.178986, 0.627451 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 0.2 )
Button/colors/font_color_hover = Color( 0.996078, 0.980392, 0.176471, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 4 )
_sections_unfolded = [ "Button", "Button/colors", "Button/styles", "Resource" ]

[sub_resource type="Theme" id=7]

default_font = ExtResource( 3 )

[sub_resource type="Theme" id=8]

default_font = ExtResource( 3 )

[sub_resource type="Theme" id=9]

default_font = ExtResource( 3 )
_sections_unfolded = [ "Resource" ]

[node name="main_menu" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="MarginContainer" type="MarginContainer" parent="Control" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1077.0
margin_top = -600.5
margin_right = -1069.0
margin_bottom = -560.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 7
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="background" type="Sprite" parent="Control/MarginContainer" index="0"]

position = Vector2( 1097, 607 )
scale = Vector2( 0.25026, 0.25026 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="description" type="TextEdit" parent="Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.27
anchor_bottom = 0.71556
margin_right = 7.62939e-006
margin_bottom = -0.000991821
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 5
theme = SubResource( 1 )
text = ""
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = true
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = true
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="train_button" type="TextureButton" parent="Control" index="2"]

anchor_left = 0.7475
anchor_top = 0.57778
anchor_right = 0.9825
anchor_bottom = 0.73778
margin_top = -0.00050354
margin_right = -0.999969
margin_bottom = -0.000488281
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Textures" ]

[node name="fight_button" type="TextureButton" parent="Control" index="3"]

anchor_left = 0.64063
anchor_top = 0.76
anchor_right = 0.99219
anchor_bottom = 0.99333
margin_left = -0.252014
margin_right = -0.876007
margin_bottom = -0.499252
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="stats_button" type="TextureButton" parent="Control" index="4"]

anchor_left = 0.74609
anchor_top = 0.39333
anchor_right = 0.99219
anchor_bottom = 0.56
margin_left = -0.436005
margin_top = -0.499252
margin_right = -2.87601
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="custom_button" type="TextureButton" parent="Control" index="5"]

anchor_left = 0.74609
anchor_top = 0.20667
anchor_right = 0.99219
anchor_bottom = 0.37333
margin_left = -0.436005
margin_top = -0.500751
margin_right = -2.87601
margin_bottom = 0.000747681
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TextureRect" type="TextureRect" parent="Control" index="6"]

anchor_left = 0.4
anchor_top = 0.10222
anchor_right = 0.6
anchor_bottom = 0.32444
margin_left = 1.52588e-005
margin_top = 0.000499725
margin_right = 1.52588e-005
margin_bottom = 0.000999451
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor", "Rect", "Size Flags" ]

[node name="logout_button" type="Button" parent="Control" index="7"]

anchor_left = 0.12
anchor_top = 0.82222
anchor_right = 0.26953
anchor_bottom = 0.90333
margin_top = 0.00050354
margin_right = 0.188004
margin_bottom = 1.75075
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Logout"
flat = false
align = 1

[node name="username" type="Label" parent="Control" index="8"]

anchor_left = 0.31152
anchor_top = 0.01833
anchor_right = 0.69434
anchor_bottom = 0.10167
margin_left = -0.608002
margin_top = -0.12425
margin_right = -0.735992
margin_bottom = -0.87575
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menu_button" parent="Control" index="9" instance=ExtResource( 7 )]

anchor_left = 0.805
anchor_top = 0.08444
anchor_right = 0.915
anchor_bottom = 0.15111
margin_top = 0.000999451
margin_right = 0.0
margin_bottom = 0.00025177
theme = SubResource( 6 )
text = "Leader"

[node name="logout_warning" type="Popup" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_left = 7.62939e-006
margin_top = 0.500008
margin_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor" ]

[node name="ColorRect" type="ColorRect" parent="logout_warning" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.188235, 0.196078, 0.878431, 0.392157 )

[node name="Label" type="Label" parent="logout_warning" index="1"]

modulate = Color( 0.772549, 0, 0, 1 )
anchor_left = 0.025
anchor_top = 0.0
anchor_right = 0.975
anchor_bottom = 0.75556
margin_left = 2.38419e-007
margin_bottom = -0.000396729
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 7 )
align = 3
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Theme" ]

[node name="button_face" type="MarginContainer" parent="logout_warning" index="2"]

anchor_left = 0.31875
anchor_top = 0.75556
anchor_right = 0.68125
anchor_bottom = 1.0
margin_top = -0.000396729
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor" ]

[node name="Panel" type="Panel" parent="logout_warning/button_face" index="0"]

modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 57.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Visibility" ]

[node name="Button" type="Button" parent="logout_warning/button_face" index="1"]

modulate = Color( 0.772549, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 57.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Leave"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Theme", "Visibility" ]

[node name="Tween" type="Tween" parent="logout_warning/button_face" index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="timeout_warning" type="Popup" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.60444
margin_left = 7.62939e-006
margin_top = 7.62939e-006
margin_bottom = 0.00100708
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 9 )
_sections_unfolded = [ "Anchor" ]

[node name="ColorRect" type="ColorRect" parent="timeout_warning" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.188235, 0.196078, 0.878431, 0.392157 )
_sections_unfolded = [ "Theme" ]

[node name="Label" type="Label" parent="timeout_warning" index="1"]

modulate = Color( 0.773438, 0, 0, 1 )
anchor_left = 0.0375
anchor_top = 0.08696
anchor_right = 0.9625
anchor_bottom = 0.91304
margin_left = 4.76837e-007
margin_top = -0.00015974
margin_bottom = 0.000160217
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 9 )
align = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Timer" type="Timer" parent="timeout_warning" index="2"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="timeout" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 300.0
one_shot = true
autostart = false

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="Control/train_button" to="." method="scene_change" binds= [ "train" ]]

[connection signal="pressed" from="Control/fight_button" to="." method="scene_change" binds= [ "fight" ]]

[connection signal="pressed" from="Control/stats_button" to="." method="scene_change" binds= [ "stats" ]]

[connection signal="pressed" from="Control/custom_button" to="." method="scene_change" binds= [ "custom" ]]

[connection signal="pressed" from="Control/logout_button" to="." method="logout"]

[connection signal="pressed" from="Control/menu_button" to="." method="scene_change" binds= [ "leader" ]]

[connection signal="pressed" from="logout_warning/button_face/Button" to="." method="_on_logout_warning_confirmed"]

[connection signal="popup_hide" from="timeout_warning" to="." method="restart_timer"]

[connection signal="timeout" from="timeout" to="." method="screen_idle_timeout"]


